Fixed an issue where the outbreaks marker would appear on top of the infection rate highlights (everything but the infection rate marker should appear behind).

--- a/style.css
+++ b/style.css
@@ -409,7 +409,6 @@ span.r {color: #ef282a}
 	top: 54.4%;
 	left: 2.8%;
 	width: 3%;
-	z-index: 11;
 }
 .outbreaksHighlight.top
 {
